--- a/movies.html
+++ b/movies.html
@@ -54,7 +54,7 @@
                 })
                 pageNum++;
                 isLoading = false
-                console.log(document.querySelectorAll("img"), "movieContainermovieContainermovieContainer", movies);
+                // console.log(document.querySelectorAll("img"), "movieContainermovieContainermovieContainer", movies);
 
             });
     }
